--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,15 @@ dependencies = [
     "langchain-google-genai>=2.1.3",
     "ollama>=0.4.8",
     "langchain-ollama>=0.3.2",
+    "sentence-transformers>=4.1.0",
+    "faiss-cpu>=1.11.0",
+    "langchain-faiss>=0.1.1",
+    "seaborn>=0.13.2",
+    "langchain-experimental>=0.3.4",
+    "langchain-chroma>=0.2.3",
+    "streamlit>=1.45.1",
+    "langchain-pymupdf4llm>=0.4.1",
+    "openai-agents[litellm]>=0.1.0",
+    "pydantic>=2.11.3",
+    "anthropic>=0.56.0",
 ]
