--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,4 +37,5 @@ dependencies = [
     "pydantic>=2.11.3",
     "anthropic>=0.56.0",
     "ag2[openai]>=0.9.5",
+    "toml-to-requirements>=0.3.0",
 ]
